--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </div>
             <img src="images/licensed-image.jpg">
         </div>
-        <canvas id="canvas" width="1280" height="720"></canvas>
+        <div class="mid">
+            <canvas id="canvas" width="1280" height="720"></canvas>
+        </div>
     </div>
 
     <div id="footer">
